# voicenote

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  VoiceNote.icns  build.sh  config.py  formatter.py  logging_setup.py  main.py  main_cli.py  note_writer.py  obsidian.py  pipeline.py  pyproject.toml  record_transcribe.py  recorder.py  transcriber.py
gui/: app.py  constants.py  devices.py  layout.py  settings_dialog.py  ui_queue.py  workflow.py
tests/: test_config.py  test_devices.py  test_formatter.py  test_note_writer.py  test_obsidian.py  test_pipeline.py  test_transcriber.py  test_workflow.py
voicenote-rs/: Cargo.toml
voicenote-rs/src/: config.rs  main.rs  obsidian.rs  recorder.rs  transcriber.rs
