[project]
name = "voicenote"
version = "0.1.0"
description = "Local voice recording and transcription tool for Obsidian"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "scipy",
    "numpy",
    "rich",
    "openai>=1.0.0",
    "python-dotenv",
    "customtkinter",
]

[project.scripts]
voicenote = "main:main"
voicenote-cli = "main_cli:main"

[tool.setuptools]
py-modules = ["main", "main_cli", "config", "recorder", "transcriber", "obsidian"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
