[project]
name = "voicenote"
version = "0.1.0"
description = "Local voice recording and transcription tool for Obsidian"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "scipy",
    "numpy",
    "rich",
    "openai>=1.0.0",
    "python-dotenv",
    "customtkinter",
]

[project.scripts]
voicenote = "main:main"
voicenote-cli = "main_cli:main"

[tool.setuptools]
py-modules = ["main", "main_cli", "config", "recorder", "transcriber", "obsidian"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", "logs", ".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
