[package]
name = "voicenote"
version = "0.1.0"
edition = "2021"
description = "Local voice recording and transcription tool for Obsidian"
authors = ["sabato"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
cpal = "0.15"
ctrlc = "3.4"
dialoguer = "0.11"
dirs = "5.0"
hound = "3.5"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
ureq = "2.10"
whisper-rs = "0.12"

[profile.release]
opt-level = 3
lto = true
